# file-organizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
file_organizer/: __init__.py
file_organizer/v1/: __init__.py  main.py  organizer.py
file_organizer/v2/: __init__.py  main.py  organizer.py
tests/: test_v1.py  test_v2.py
